--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -414,11 +414,12 @@
         margin: 0 auto;
     }
 
-    .marqueeTxt {
-        padding: 10px 0;
-        font-size: 24px;
-    }
-
+  .marqueeTxt {
+    padding: 10px 0;
+    font-size: 24px;
+    gap: 60px;
+    margin: 0 60px;
+}
     .downloadIcon {
         max-width: 120px
     }
