--- a/src/components/GameSection/GameSection.css
+++ b/src/components/GameSection/GameSection.css
@@ -82,5 +82,13 @@ cursor: pointer;
         max-width: 100%;
         margin: 0 auto;
     }
+    section.gameSection {
+        padding-top: 160px;
+        margin-bottom: 20px;
+    }
+
+    .mb-100 {
+        margin-bottom: 60px;
+    }
     
 }
