--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,10 @@
-.headerWrapper {
+.nav-header {
     display: flex;
     justify-content: space-between;
     width: 100%;
     gap: 20px;
 }
-
-.headerLogo {
+.nav-logo {
     padding: 0;
     display: flex;
     align-items: center;
@@ -15,16 +14,14 @@
     position: relative;
     text-decoration: none;
 }
-
-.headerLogo>img {
+.nav-logo > img {
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
 }
-
-.headerLogo>h2 {
+.nav-logo > h2 {
     font-family: "Condiment", cursive;
     font-size: 50px;
     font-weight: 300;
@@ -32,8 +29,7 @@
     text-shadow: -2.9px -2.9px 23.9px #ff01b7;
     position: relative;
 }
-
-.headerRight {
+.nav-right {
     width: calc(100% - 342px);
     height: 156px;
     padding: 0 40px;
@@ -41,28 +37,24 @@
     height: 142px;
     display: flex;
 }
-
-.headerRight .headerRightinnerWrap {
+.nav-right .nav-right-inner {
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 20px;
     width: 100%;
 }
-
-.headerRight .headerRightinnerWrap>img.headerightBg {
+.nav-right .nav-right-inner > img.nav-right-bg {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
 }
-
-.headerRight .headerRightinnerWrap>img.bigWinLogo {
+.nav-right .nav-right-inner > img.nav-brand-logo {
     position: relative;
 }
-
-.amountHead {
+.wallet-info {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -72,22 +64,19 @@
     height: 64px;
     position: relative;
 }
-
-.amountHead>span:first-child {
+.wallet-info > span:first-child {
     color: var(--white);
     font-size: 20px;
     font-weight: 600;
     line-height: 1;
 }
-
-.amountHead>span:nth-child(2) {
+.wallet-info > span:nth-child(2) {
     font-size: 12px;
     font-weight: 600;
     line-height: 1;
     color: var(--darkGray);
 }
-
-.amountHead .addBtn {
+.wallet-info .btn-add {
     width: 30px;
     height: 30px;
     padding: 8px;
@@ -102,8 +91,7 @@
     top: 20px;
     box-shadow: 0 0 20px 0 rgba(0, 128, 0, 0.8);
 }
-
-.headerDropdown.dropdown>button {
+.user-dropdown.dropdown > button {
     width: 230px;
     height: 60px;
     background: url("../../assets/images/headerDropdownBg.png") no-repeat center center / contain;
@@ -113,12 +101,10 @@
     font-weight: 600;
     position: relative;
 }
-
-.headerDropdown.dropdown>button>span {
+.user-dropdown.dropdown > button > span {
     padding-left: 50px;
 }
-
-.headerDropdown.dropdown .userImg {
+.user-dropdown.dropdown .user-avatar {
     min-width: 68px;
     max-width: 68px;
     min-height: 68px;
@@ -130,87 +116,70 @@
     left: 20px;
     top: 0;
 }
-
-.headerDropdown.dropdown .dropdown-menu {
+.user-dropdown.dropdown .dropdown-menu {
     background-color: var(--ddBg);
 }
-
-.headerDropdown.dropdown .dropdown-menu .dropdown-item {
+.user-dropdown.dropdown .dropdown-menu .dropdown-item {
     color: var(--white);
 }
-
-.headerDropdown.dropdown .dropdown-menu .dropdown-item:hover {
+.user-dropdown.dropdown .dropdown-menu .dropdown-item:hover {
     color: var(--black);
 }
-
-.headwrappermob {
+.nav-mobile {
     display: none;
 }
-
-/* Rsponsive Css */
+/* Responsive CSS */
 @media screen and (max-width: 1600px) {
-    .amountHead {
+    .wallet-info {
         max-width: 180px;
-    }
-
-    .headerRight .headerRightinnerWrap>img.bigWinLogo {
+   }
+    .nav-right .nav-right-inner > img.nav-brand-logo {
         max-width: 200px;
-    }
-
-    .headerDropdown.dropdown .userImg {
+   }
+    .user-dropdown.dropdown .user-avatar {
         min-width: 45px;
         max-width: 45px;
         min-height: 45px;
         max-height: 45px;
-    }
-
-    .headerDropdown.dropdown>button {
+   }
+    .user-dropdown.dropdown > button {
         width: 185px;
         height: 60px;
-    }
-
-    .headerDropdown.dropdown .userImg {
+   }
+    .user-dropdown.dropdown .user-avatar {
         left: 21px;
         top: 9px;
-    }
+   }
 }
-
 @media screen and (max-width: 1024px) {
-    .headerWrapper {
+    .nav-header {
         align-items: flex-start;
-    }
-
-    .headerRight {
+   }
+    .nav-right {
         width: calc(100% - 215px);
         height: auto;
         display: block;
-    }
-
-    .headerRight .headerRightinnerWrap {
+        padding: 0 15px;
+   }
+    .nav-right .nav-right-inner {
         position: relative;
-    }
-
-    .headerRight .headerRightinnerWrap>img.headerightBg {
+        justify-content: end;
+        
+   }
+    .nav-right .nav-right-inner > img.nav-right-bg {
         display: none;
-    }
-
-    .headerRight .headerRightinnerWrap>.bigWinLogo,
-    .headerRight .headerRightinnerWrap>.amountHead {
+   }
+    .nav-right .nav-right-inner > .nav-brand-logo, .nav-right .nav-right-inner > .wallet-info {
         display: none;
-    }
-
-    
-
-    .headerLogo {
+   }
+    .nav-logo {
         width: 200px;
         height: 110px;
-    }
-
-    .headerLogo>h2 {
+   }
+    .nav-logo > h2 {
         font-size: 35px;
-    }
-
-    .headwrappermob {
+   }
+    .nav-mobile {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -218,24 +187,15 @@
         gap: 20px;
         margin-top: 30px;
         padding: 0 20px;
-    }
-
-    .headwrappermob>img {
+   }
+    .nav-mobile > img {
         max-width: 200px;
-    }
-
-    .amountHead {
-        z-index: -1;
-    }
+   }
 }
-
 @media screen and (max-width: 767px) {
-    .headerLogo {
+    .nav-logo {
         font-size: 25px;
         width: 150px;
         height: 80px;
-    }
-
-    
+   }
 }
-
